--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 .hero{
     width: 100%;
     height: 140vh;
-    background-image: url(/assets/hero-bg.png);
+    background-image: url(assets/hero-bg.png);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
